# ClassyVoxelizer

./: CMakeLists.txt  readme.md
include/: ClassyVoxelizer.h  ColoredVoxelGrid.h  ColoredVoxelizer.h  MultiClassVoxelGrid.h  MultiClassVoxelizer.h  VoxelGrid.h  Voxelizer.h
src/: ClassyVoxelizer.cpp  ColoredVoxelGrid.cpp  ColoredVoxelizer.cpp  MultiClassVoxelGrid.cpp  MultiClassVoxelizer.cpp  VoxelGrid.cpp  Voxelizer.cpp  main.cpp
